--- a/Data Cleansing.ipynb
+++ b/Data Cleansing.ipynb
@@ -108,7 +108,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "af1df08a",
+   "id": "c0e9ca22",
    "metadata": {},
    "source": [
     "## Check Null Values with PySpark DataFrame"
@@ -116,8 +116,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "id": "447ffe5b",
+   "execution_count": 8,
+   "id": "da1e83aa",
    "metadata": {
     "scrolled": true
    },
@@ -126,52 +126,25 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "                                                                                \r"
+      "[Stage 72:=============================>                            (2 + 2) / 4]\r"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "+----------------+---------------+---------------+--------------------------------+---------------------------------+--------------------+--------------------------------+-----------------+---------------------------+---------------------------+----------------------------------+------------------------------+\n",
-      "|Line#_null_count|Date_null_count|Time_null_count|Water Content (m3/m3)_null_count|Solar Radiation (W/m2)_null_count|Rain (mm)_null_count|Temperature (Celcius)_null_count|RH (%)_null_count|Wind Speed (m/s)_null_count|Gust Speed (m/s)_null_count|Wind Direction (Degree)_null_count|Dew Point (Celcius)_null_count|\n",
-      "+----------------+---------------+---------------+--------------------------------+---------------------------------+--------------------+--------------------------------+-----------------+---------------------------+---------------------------+----------------------------------+------------------------------+\n",
-      "|               0|              0|              0|                               0|                                0|                   0|                               0|                0|                          0|                          0|                                 0|                             0|\n",
-      "+----------------+---------------+---------------+--------------------------------+---------------------------------+--------------------+--------------------------------+-----------------+---------------------------+---------------------------+----------------------------------+------------------------------+\n",
-      "\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "                                                                                \r"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "+---------------------+--------------------+--------------------+-------------------------------------+--------------------------------------+-------------------------+-------------------------------------+----------------------+--------------------------------+--------------------------------+---------------------------------------+-----------------------------------+\n",
-      "|Line#_null_percentage|Date_null_percentage|Time_null_percentage|Water Content (m3/m3)_null_percentage|Solar Radiation (W/m2)_null_percentage|Rain (mm)_null_percentage|Temperature (Celcius)_null_percentage|RH (%)_null_percentage|Wind Speed (m/s)_null_percentage|Gust Speed (m/s)_null_percentage|Wind Direction (Degree)_null_percentage|Dew Point (Celcius)_null_percentage|\n",
-      "+---------------------+--------------------+--------------------+-------------------------------------+--------------------------------------+-------------------------+-------------------------------------+----------------------+--------------------------------+--------------------------------+---------------------------------------+-----------------------------------+\n",
-      "|                  0.0|                 0.0|                 0.0|                                  0.0|                                   0.0|                      0.0|                                  0.0|                   0.0|                             0.0|                             0.0|                                    0.0|                                0.0|\n",
-      "+---------------------+--------------------+--------------------+-------------------------------------+--------------------------------------+-------------------------+-------------------------------------+----------------------+--------------------------------+--------------------------------+---------------------------------------+-----------------------------------+\n",
-      "\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "[Stage 32:=============================>                            (2 + 2) / 4]\r"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Columns with null values: []\n"
+      "Line#: 0 null values\n",
+      "Date: 0 null values\n",
+      "Time: 0 null values\n",
+      "Water Content (m3/m3): 0 null values\n",
+      "Solar Radiation (W/m2): 0 null values\n",
+      "Rain (mm): 0 null values\n",
+      "Temperature (Celcius): 0 null values\n",
+      "RH (%): 0 null values\n",
+      "Wind Speed (m/s): 0 null values\n",
+      "Gust Speed (m/s): 0 null values\n",
+      "Wind Direction (Degree): 0 null values\n",
+      "Dew Point (Celcius): 0 null values\n"
      ]
     },
     {
@@ -179,7 +152,7 @@
      "output_type": "stream",
      "text": [
       "\r",
-      "[Stage 32:===========================================>              (3 + 1) / 4]\r",
+      "[Stage 72:===========================================>              (3 + 1) / 4]\r",
       "\r",
       "                                                                                \r"
      ]
@@ -188,22 +161,22 @@
    "source": [
     "from pyspark.sql.functions import col, count, when, isnan\n",
     "\n",
-    "# Count null values for each column\n",
-    "null_counts = df.select([count(when(col(c).isNull(), c)).alias(c + '_null_count') for c in df.columns])\n",
-    "null_counts.show()\n",
+    "# Assuming 'df' is your PySpark DataFrame from the previous example\n",
+    "# Method 1: Using PySpark SQL functions\n",
+    "null_counts = df.select([count(when(col(c).isNull(), c)).alias(c) for c in df.columns]).collect()[0]\n",
     "\n",
-    "# Get percentage of null values for each column\n",
-    "total_rows = df.count()\n",
-    "null_percentages = df.select([\n",
-    "    (count(when(col(c).isNull(), c)) / total_rows * 100).alias(c + '_null_percentage') \n",
-    "    for c in df.columns\n",
-    "])\n",
-    "null_percentages.show()\n",
-    "\n",
-    "# Identify columns with null values\n",
-    "columns_with_nulls = [c for c in df.columns if df.filter(col(c).isNull()).count() > 0]\n",
-    "print(\"Columns with null values:\", columns_with_nulls)"
+    "# Print null counts for each column\n",
+    "for column, null_count in zip(df.columns, null_counts):\n",
+    "    print(f\"{column}: {null_count} null values\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "207765bb",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
