--- a/Data Cleansing.ipynb
+++ b/Data Cleansing.ipynb
@@ -264,41 +264,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 36,
    "id": "83a0c6a4",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "AnalysisException",
-     "evalue": "cannot resolve '`-`' given input columns: [Date, Dew Point (Celcius), Gust Speed (m/s), Line#, RH (%), Rain (mm), Solar Radiation (W/m2), Temperature (Celcius), Time, Water Content (m3/m3), Wind Direction (Degree), Wind Speed (m/s)];\n'Project [Line##971, to_date(concat(lpad(substring('Date, 1, 2), 2, 20), '-, substring('Date, 4, 2), '-, substring('Date, 7, 2)), Some(yyyy-MM-dd)) AS Date#1186, Time#973, Water Content (m3/m3)#974, Solar Radiation (W/m2)#975, Rain (mm)#976, Temperature (Celcius)#977, RH (%)#978, Wind Speed (m/s)#979, Gust Speed (m/s)#980, Wind Direction (Degree)#981, Dew Point (Celcius)#982]\n+- Deduplicate [Solar Radiation (W/m2)#975, Water Content (m3/m3)#974, Dew Point (Celcius)#982, Gust Speed (m/s)#980, RH (%)#978, Wind Speed (m/s)#979, Temperature (Celcius)#977, Date#972, Line##971, Wind Direction (Degree)#981, Rain (mm)#976, Time#973]\n   +- Project [Line##971, Date#972, Time#973, Water Content (m3/m3)#974, Solar Radiation (W/m2)#975, Rain (mm)#976, Temperature (Celcius)#977, RH (%)#978, Wind Speed (m/s)#979, Gust Speed (m/s)#980, Wind Direction (Degree)#981, Dew Point (Celcius)#982]\n      +- Relation[Line##971,Date#972,Time#973,Water Content (m3/m3)#974,Solar Radiation (W/m2)#975,Rain (mm)#976,Temperature (Celcius)#977,RH (%)#978,Wind Speed (m/s)#979,Gust Speed (m/s)#980,Wind Direction (Degree)#981,Dew Point (Celcius)#982] csv\n",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mAnalysisException\u001b[0m                         Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[35], line 4\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;66;03m#import library\u001b[39;00m\n\u001b[1;32m      2\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mpyspark\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01msql\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mfunctions\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m to_date, concat, lpad\n\u001b[0;32m----> 4\u001b[0m df \u001b[38;5;241m=\u001b[39m \u001b[43mdf\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mwithColumn\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43mDate\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mto_date\u001b[49m\u001b[43m(\u001b[49m\u001b[43mconcat\u001b[49m\u001b[43m(\u001b[49m\n\u001b[1;32m      5\u001b[0m \u001b[43m    \u001b[49m\u001b[43mlpad\u001b[49m\u001b[43m(\u001b[49m\u001b[43msubstring\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43mDate\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m1\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m2\u001b[39;49m\u001b[43m)\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m2\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43m20\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m)\u001b[49m\u001b[43m,\u001b[49m\n\u001b[1;32m      6\u001b[0m \u001b[43m    \u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43m-\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m,\u001b[49m\n\u001b[1;32m      7\u001b[0m \u001b[43m    \u001b[49m\u001b[43msubstring\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43mDate\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m4\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m2\u001b[39;49m\u001b[43m)\u001b[49m\u001b[43m,\u001b[49m\n\u001b[1;32m      8\u001b[0m \u001b[43m    \u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43m-\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m,\u001b[49m\n\u001b[1;32m      9\u001b[0m \u001b[43m    \u001b[49m\u001b[43msubstring\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43mDate\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m7\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m2\u001b[39;49m\u001b[43m)\u001b[49m\n\u001b[1;32m     10\u001b[0m \u001b[43m)\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43myyyy-MM-dd\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m)\u001b[49m\u001b[43m)\u001b[49m\n",
-      "File \u001b[0;32m/usr/local/spark3/spark-3.1.2-bin-hadoop3.2/python/pyspark/sql/dataframe.py:2455\u001b[0m, in \u001b[0;36mDataFrame.withColumn\u001b[0;34m(self, colName, col)\u001b[0m\n\u001b[1;32m   2425\u001b[0m \u001b[38;5;250m\u001b[39m\u001b[38;5;124;03m\"\"\"\u001b[39;00m\n\u001b[1;32m   2426\u001b[0m \u001b[38;5;124;03mReturns a new :class:`DataFrame` by adding a column or replacing the\u001b[39;00m\n\u001b[1;32m   2427\u001b[0m \u001b[38;5;124;03mexisting column that has the same name.\u001b[39;00m\n\u001b[0;32m   (...)\u001b[0m\n\u001b[1;32m   2452\u001b[0m \n\u001b[1;32m   2453\u001b[0m \u001b[38;5;124;03m\"\"\"\u001b[39;00m\n\u001b[1;32m   2454\u001b[0m \u001b[38;5;28;01massert\u001b[39;00m \u001b[38;5;28misinstance\u001b[39m(col, Column), \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mcol should be Column\u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[0;32m-> 2455\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m DataFrame(\u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43m_jdf\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mwithColumn\u001b[49m\u001b[43m(\u001b[49m\u001b[43mcolName\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mcol\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43m_jc\u001b[49m\u001b[43m)\u001b[49m, \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39msql_ctx)\n",
-      "File \u001b[0;32m/usr/local/spark3/spark-3.1.2-bin-hadoop3.2/python/lib/py4j-0.10.9-src.zip/py4j/java_gateway.py:1304\u001b[0m, in \u001b[0;36mJavaMember.__call__\u001b[0;34m(self, *args)\u001b[0m\n\u001b[1;32m   1298\u001b[0m command \u001b[38;5;241m=\u001b[39m proto\u001b[38;5;241m.\u001b[39mCALL_COMMAND_NAME \u001b[38;5;241m+\u001b[39m\\\n\u001b[1;32m   1299\u001b[0m     \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mcommand_header \u001b[38;5;241m+\u001b[39m\\\n\u001b[1;32m   1300\u001b[0m     args_command \u001b[38;5;241m+\u001b[39m\\\n\u001b[1;32m   1301\u001b[0m     proto\u001b[38;5;241m.\u001b[39mEND_COMMAND_PART\n\u001b[1;32m   1303\u001b[0m answer \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mgateway_client\u001b[38;5;241m.\u001b[39msend_command(command)\n\u001b[0;32m-> 1304\u001b[0m return_value \u001b[38;5;241m=\u001b[39m \u001b[43mget_return_value\u001b[49m\u001b[43m(\u001b[49m\n\u001b[1;32m   1305\u001b[0m \u001b[43m    \u001b[49m\u001b[43manswer\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mgateway_client\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mtarget_id\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mname\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m   1307\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m temp_arg \u001b[38;5;129;01min\u001b[39;00m temp_args:\n\u001b[1;32m   1308\u001b[0m     temp_arg\u001b[38;5;241m.\u001b[39m_detach()\n",
-      "File \u001b[0;32m/usr/local/spark3/spark-3.1.2-bin-hadoop3.2/python/pyspark/sql/utils.py:117\u001b[0m, in \u001b[0;36mcapture_sql_exception.<locals>.deco\u001b[0;34m(*a, **kw)\u001b[0m\n\u001b[1;32m    113\u001b[0m converted \u001b[38;5;241m=\u001b[39m convert_exception(e\u001b[38;5;241m.\u001b[39mjava_exception)\n\u001b[1;32m    114\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m \u001b[38;5;28misinstance\u001b[39m(converted, UnknownException):\n\u001b[1;32m    115\u001b[0m     \u001b[38;5;66;03m# Hide where the exception came from that shows a non-Pythonic\u001b[39;00m\n\u001b[1;32m    116\u001b[0m     \u001b[38;5;66;03m# JVM exception message.\u001b[39;00m\n\u001b[0;32m--> 117\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m converted \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m\n\u001b[1;32m    118\u001b[0m \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[1;32m    119\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m\n",
-      "\u001b[0;31mAnalysisException\u001b[0m: cannot resolve '`-`' given input columns: [Date, Dew Point (Celcius), Gust Speed (m/s), Line#, RH (%), Rain (mm), Solar Radiation (W/m2), Temperature (Celcius), Time, Water Content (m3/m3), Wind Direction (Degree), Wind Speed (m/s)];\n'Project [Line##971, to_date(concat(lpad(substring('Date, 1, 2), 2, 20), '-, substring('Date, 4, 2), '-, substring('Date, 7, 2)), Some(yyyy-MM-dd)) AS Date#1186, Time#973, Water Content (m3/m3)#974, Solar Radiation (W/m2)#975, Rain (mm)#976, Temperature (Celcius)#977, RH (%)#978, Wind Speed (m/s)#979, Gust Speed (m/s)#980, Wind Direction (Degree)#981, Dew Point (Celcius)#982]\n+- Deduplicate [Solar Radiation (W/m2)#975, Water Content (m3/m3)#974, Dew Point (Celcius)#982, Gust Speed (m/s)#980, RH (%)#978, Wind Speed (m/s)#979, Temperature (Celcius)#977, Date#972, Line##971, Wind Direction (Degree)#981, Rain (mm)#976, Time#973]\n   +- Project [Line##971, Date#972, Time#973, Water Content (m3/m3)#974, Solar Radiation (W/m2)#975, Rain (mm)#976, Temperature (Celcius)#977, RH (%)#978, Wind Speed (m/s)#979, Gust Speed (m/s)#980, Wind Direction (Degree)#981, Dew Point (Celcius)#982]\n      +- Relation[Line##971,Date#972,Time#973,Water Content (m3/m3)#974,Solar Radiation (W/m2)#975,Rain (mm)#976,Temperature (Celcius)#977,RH (%)#978,Wind Speed (m/s)#979,Gust Speed (m/s)#980,Wind Direction (Degree)#981,Dew Point (Celcius)#982] csv\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "#import library\n",
-    "from pyspark.sql.functions import to_date, concat, lpad\n",
+    "from pyspark.sql.functions import to_date, date_format\n",
     "\n",
-    "df = df.withColumn(\"Date\", to_date(concat(\n",
-    "    lpad(substring(\"Date\", 1, 2), 2, \"20\"),\n",
-    "    \"-\",\n",
-    "    substring(\"Date\", 4, 2),\n",
-    "    \"-\",\n",
-    "    substring(\"Date\", 7, 2)\n",
-    "), \"yyyy-MM-dd\"))"
+    "df = df.withColumn(\"Date\", to_date(\"Date\", \"yy/MM/dd\"))\n",
+    "df = df.withColumn(\"Date\", date_format(\"Date\", \"yyyy-MM-dd\"))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 37,
    "id": "49510f1b",
    "metadata": {},
    "outputs": [
@@ -306,22 +286,22 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "[Stage 51:===========================================>              (3 + 1) / 4]\r"
+      "[Stage 53:>                                                         (0 + 4) / 4]\r"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "+-----+--------+--------+---------------------+----------------------+---------+---------------------+------+\n",
-      "|Line#|    Date|    Time|Water Content (m3/m3)|Solar Radiation (W/m2)|Rain (mm)|Temperature (Celcius)|RH (%)|\n",
-      "+-----+--------+--------+---------------------+----------------------+---------+---------------------+------+\n",
-      "| 2419|21/05/09|09:30:00|               0.2837|                 326.0|      0.0|                31.61|  75.7|\n",
-      "| 2454|21/05/09|12:25:00|               0.2837|                 411.0|      0.0|                33.47|  66.4|\n",
-      "| 2513|21/05/09|17:20:00|               0.2834|                  57.0|      0.0|                32.61|  69.8|\n",
-      "| 2537|21/05/09|19:20:00|               0.2834|                   1.0|      0.0|                29.41|  85.5|\n",
-      "| 3002|21/05/11|10:05:00|               0.2813|                 791.0|      0.0|                33.84|  66.0|\n",
-      "+-----+--------+--------+---------------------+----------------------+---------+---------------------+------+\n",
+      "+-----+----------+--------+---------------------+----------------------+---------+---------------------+------+\n",
+      "|Line#|      Date|    Time|Water Content (m3/m3)|Solar Radiation (W/m2)|Rain (mm)|Temperature (Celcius)|RH (%)|\n",
+      "+-----+----------+--------+---------------------+----------------------+---------+---------------------+------+\n",
+      "| 2419|2021-05-09|09:30:00|               0.2837|                 326.0|      0.0|                31.61|  75.7|\n",
+      "| 2454|2021-05-09|12:25:00|               0.2837|                 411.0|      0.0|                33.47|  66.4|\n",
+      "| 2513|2021-05-09|17:20:00|               0.2834|                  57.0|      0.0|                32.61|  69.8|\n",
+      "| 2537|2021-05-09|19:20:00|               0.2834|                   1.0|      0.0|                29.41|  85.5|\n",
+      "| 3002|2021-05-11|10:05:00|               0.2813|                 791.0|      0.0|                33.84|  66.0|\n",
+      "+-----+----------+--------+---------------------+----------------------+---------+---------------------+------+\n",
       "only showing top 5 rows\n",
       "\n",
       "root\n",
