Done cleaned data

--- a/Data Cleansing.ipynb
+++ b/Data Cleansing.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "95eacec2",
    "metadata": {},
    "outputs": [
@@ -16,7 +16,7 @@
        "        <div>\n",
        "            <p><b>SparkContext</b></p>\n",
        "\n",
-       "            <p><a href=\"http://192.168.113.138:4041\">Spark UI</a></p>\n",
+       "            <p><a href=\"http://192.168.113.138:4040\">Spark UI</a></p>\n",
        "\n",
        "            <dl>\n",
        "              <dt>Version</dt>\n",
@@ -32,10 +32,10 @@
        "        "
       ],
       "text/plain": [
-       "<pyspark.sql.session.SparkSession at 0x7fb31c4c12b0>"
+       "<pyspark.sql.session.SparkSession at 0x7fcc06559eb0>"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 15,
    "id": "c0ce039d",
    "metadata": {},
    "outputs": [
@@ -62,7 +62,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "[Stage 43:>                                                         (0 + 4) / 4]\r"
+      "[Stage 20:>                                                         (0 + 4) / 4]\r"
      ]
     },
     {
@@ -89,6 +89,9 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
+      "\r",
+      "[Stage 20:==============>                                           (1 + 3) / 4]\r",
+      "\r",
       "                                                                                \r"
      ]
     }
@@ -121,7 +124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 16,
    "id": "2a72fa0e",
    "metadata": {
     "scrolled": true
@@ -131,7 +134,8 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "[Stage 44:>                                                         (0 + 4) / 4]\r"
+      "\r",
+      "[Stage 21:>                                                         (0 + 4) / 4]\r"
      ]
     },
     {
@@ -156,6 +160,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
+      "\r",
       "                                                                                \r"
      ]
     }
@@ -180,17 +185,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 17,
    "id": "cfa0ccf5",
    "metadata": {},
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "                                                                                \r"
+     ]
+    },
     {
      "data": {
       "text/plain": [
        "160418"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -209,7 +221,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 18,
    "id": "f73e6ad9",
    "metadata": {},
    "outputs": [],
@@ -227,7 +239,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 19,
    "id": "7f745546",
    "metadata": {},
    "outputs": [
@@ -244,7 +256,7 @@
        "160418"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -264,7 +276,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 20,
    "id": "83a0c6a4",
    "metadata": {},
    "outputs": [],
@@ -278,7 +290,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 21,
    "id": "49510f1b",
    "metadata": {},
    "outputs": [
@@ -286,22 +298,22 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "[Stage 53:>                                                         (0 + 4) / 4]\r"
+      "[Stage 28:=============================>                            (2 + 2) / 4]\r"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "+-----+----------+--------+---------------------+----------------------+---------+---------------------+------+\n",
-      "|Line#|      Date|    Time|Water Content (m3/m3)|Solar Radiation (W/m2)|Rain (mm)|Temperature (Celcius)|RH (%)|\n",
-      "+-----+----------+--------+---------------------+----------------------+---------+---------------------+------+\n",
-      "| 2419|2021-05-09|09:30:00|               0.2837|                 326.0|      0.0|                31.61|  75.7|\n",
-      "| 2454|2021-05-09|12:25:00|               0.2837|                 411.0|      0.0|                33.47|  66.4|\n",
-      "| 2513|2021-05-09|17:20:00|               0.2834|                  57.0|      0.0|                32.61|  69.8|\n",
-      "| 2537|2021-05-09|19:20:00|               0.2834|                   1.0|      0.0|                29.41|  85.5|\n",
-      "| 3002|2021-05-11|10:05:00|               0.2813|                 791.0|      0.0|                33.84|  66.0|\n",
-      "+-----+----------+--------+---------------------+----------------------+---------+---------------------+------+\n",
+      "+-----+----------+--------+---------------------+----------------------+---------+---------------------+------+----------------+----------------+-----------------------+-------------------+\n",
+      "|Line#|      Date|    Time|Water Content (m3/m3)|Solar Radiation (W/m2)|Rain (mm)|Temperature (Celcius)|RH (%)|Wind Speed (m/s)|Gust Speed (m/s)|Wind Direction (Degree)|Dew Point (Celcius)|\n",
+      "+-----+----------+--------+---------------------+----------------------+---------+---------------------+------+----------------+----------------+-----------------------+-------------------+\n",
+      "| 2419|2021-05-09|09:30:00|               0.2837|                 326.0|      0.0|                31.61|  75.7|             0.0|             0.0|                  108.0|              26.83|\n",
+      "| 2454|2021-05-09|12:25:00|               0.2837|                 411.0|      0.0|                33.47|  66.4|             0.0|             0.0|                   80.0|              26.37|\n",
+      "| 2513|2021-05-09|17:20:00|               0.2834|                  57.0|      0.0|                32.61|  69.8|             0.0|             0.0|                   74.0|              26.41|\n",
+      "| 2537|2021-05-09|19:20:00|               0.2834|                   1.0|      0.0|                29.41|  85.5|             0.0|             0.0|                   86.0|              26.76|\n",
+      "| 3002|2021-05-11|10:05:00|               0.2813|                 791.0|      0.0|                33.84|  66.0|             1.0|             2.3|                  119.0|              26.62|\n",
+      "+-----+----------+--------+---------------------+----------------------+---------+---------------------+------+----------------+----------------+-----------------------+-------------------+\n",
       "only showing top 5 rows\n",
       "\n",
       "root\n",
@@ -313,9 +325,35 @@
       " |-- Rain (mm): double (nullable = true)\n",
       " |-- Temperature (Celcius): double (nullable = true)\n",
       " |-- RH (%): double (nullable = true)\n",
+      " |-- Wind Speed (m/s): double (nullable = true)\n",
+      " |-- Gust Speed (m/s): double (nullable = true)\n",
+      " |-- Wind Direction (Degree): double (nullable = true)\n",
+      " |-- Dew Point (Celcius): double (nullable = true)\n",
       "\n"
      ]
     },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\r",
+      "                                                                                \r"
+     ]
+    }
+   ],
+   "source": [
+    "df.show(5)\n",
+    "\n",
+    "# Print the schema of the selected columns\n",
+    "df.printSchema()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "id": "24513b36",
+   "metadata": {},
+   "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
@@ -325,16 +363,20 @@
     }
    ],
    "source": [
-    "selected_columns = [\n",
-    "    \"Line#\", \"Date\", \"Time\", \"Water Content (m3/m3)\", \n",
-    "    \"Solar Radiation (W/m2)\", \"Rain (mm)\", \n",
-    "    \"Temperature (Celcius)\", \"RH (%)\"\n",
-    "]\n",
-    "df.select(*selected_columns).show(5)\n",
+    "# Save the DataFrame to the specified local directory\n",
+    "output_path = \"file:///home/student/Data/weather-datasets/phnom_penh/Big Data Weather Prediction Capstone Project/cleand_data.csv\"\n",
     "\n",
-    "# Print the schema of the selected columns\n",
-    "df.select(*selected_columns).printSchema()"
+    "# Save the DataFrame to a single CSV file\n",
+    "df.coalesce(1).write.csv(output_path, mode=\"overwrite\", header=True)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "73d0e598",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
