WIP: Data Analysis & Visualization.ipynb

--- a/Data Partition.ipynb
+++ b/Data Partition.ipynb
@@ -193,6 +193,14 @@
      "text": [
       "Data successfully partitioned and saved to Hive!\n"
      ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2024-12-02 22:51:41,623 WARN spark.HeartbeatReceiver: Removing executor driver with no recent heartbeats: 130999 ms exceeds timeout 120000 ms\n",
+      "2024-12-02 22:51:45,465 WARN spark.SparkContext: Killing executors is not supported by current scheduler.\n"
+     ]
     }
    ],
    "source": [
