WIP: Data Analysis & Visualization.ipynb

--- a/Data Analysis & Visualization.ipynb
+++ b/Data Analysis & Visualization.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "560d4f8a",
+   "id": "9235f9ad",
    "metadata": {},
    "source": [
     "## Create SparkSession"
@@ -11,7 +11,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "cdf2d4d3",
+   "id": "f459e121",
    "metadata": {},
    "outputs": [
     {
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d592263b",
+   "id": "d8b5b80b",
    "metadata": {},
    "source": [
     "## Show databases from HIVE"
@@ -46,7 +46,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "101105c8",
+   "id": "7ceea708",
    "metadata": {},
    "outputs": [
     {
@@ -69,7 +69,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "110171a9",
+   "id": "bcf3a20c",
    "metadata": {},
    "source": [
     "## Use mydb database"
@@ -78,7 +78,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "c93b8f6b",
+   "id": "3f2a0ec0",
    "metadata": {},
    "outputs": [
     {
@@ -98,7 +98,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "baf76f80",
+   "id": "8fc9f9d2",
    "metadata": {},
    "source": [
     "## Show mydb tables"
@@ -107,7 +107,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "53b175ea",
+   "id": "5d322423",
    "metadata": {},
    "outputs": [
     {
@@ -131,13 +131,45 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 13,
+   "id": "24b87257",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+--------------------+\n",
+      "|            col_name|\n",
+      "+--------------------+\n",
+      "|                Date|\n",
+      "|                Time|\n",
+      "| Water_Content_m3_m3|\n",
+      "|Solar_Radiation_W_m2|\n",
+      "|             Rain_mm|\n",
+      "| Temperature_Celsius|\n",
+      "|          RH_percent|\n",
+      "|      Wind_Speed_m_s|\n",
+      "|      Gust_Speed_m_s|\n",
+      "|Wind_Direction_De...|\n",
+      "|   Dew_Point_Celsius|\n",
+      "|               month|\n",
+      "+--------------------+\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "spark.sql('show columns in weather_data_partitioned_by_month').show()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "52ca021a",
+   "id": "d4065720",
    "metadata": {},
    "outputs": [],
-   "source": [
-    "spark.sql()"
-   ]
+   "source": []
   }
  ],
  "metadata": {
