WIP: Machine Learning.ipynb

--- a/Data Partition.ipynb
+++ b/Data Partition.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 2,
    "id": "14b7072b",
    "metadata": {},
    "outputs": [
@@ -16,7 +16,7 @@
        "        <div>\n",
        "            <p><b>SparkContext</b></p>\n",
        "\n",
-       "            <p><a href=\"http://192.168.113.138:4040\">Spark UI</a></p>\n",
+       "            <p><a href=\"http://192.168.113.138:4041\">Spark UI</a></p>\n",
        "\n",
        "            <dl>\n",
        "              <dt>Version</dt>\n",
@@ -32,10 +32,10 @@
        "        "
       ],
       "text/plain": [
-       "<pyspark.sql.session.SparkSession at 0x7f24d20e1e80>"
+       "<pyspark.sql.session.SparkSession at 0x7f9aa405e0a0>"
       ]
      },
-     "execution_count": 53,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 3,
    "id": "ae0308a6",
    "metadata": {},
    "outputs": [
@@ -54,7 +54,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "[Stage 116:========================================>                (5 + 2) / 7]\r"
+      "                                                                                \r"
      ]
     },
     {
@@ -74,14 +74,6 @@
       " |-- Wind Direction (Degree): double (nullable = true)\n",
       " |-- Dew Point (Celcius): double (nullable = true)\n",
       "\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\r",
-      "                                                                                \r"
      ]
     }
    ],
@@ -113,7 +105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 4,
    "id": "d6d60cee",
    "metadata": {},
    "outputs": [
@@ -176,7 +168,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": null,
    "id": "1c341d9c",
    "metadata": {},
    "outputs": [
@@ -184,104 +176,10 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "                                                                                \r"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Data successfully partitioned and saved to Hive!\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "2024-12-02 22:51:41,623 WARN spark.HeartbeatReceiver: Removing executor driver with no recent heartbeats: 130999 ms exceeds timeout 120000 ms\n",
-      "2024-12-02 22:51:45,465 WARN spark.SparkContext: Killing executors is not supported by current scheduler.\n",
-      "2024-12-06 19:23:31,126 ERROR bonecp.BoneCP: Failed to acquire connection to jdbc:mysql://localhost:3306/hive?createDatabaseIfNotExist=true&useSSL=false. Sleeping for 7000 ms. Attempts left: 5\n",
-      "com.mysql.jdbc.exceptions.jdbc4.CommunicationsException: Communications link failure\n",
-      "\n",
-      "The last packet successfully received from the server was 1,331,848 milliseconds ago.  The last packet sent successfully to the server was 1,318,581 milliseconds ago.\n",
-      "\tat sun.reflect.NativeConstructorAccessorImpl.newInstance0(Native Method)\n",
-      "\tat sun.reflect.NativeConstructorAccessorImpl.newInstance(NativeConstructorAccessorImpl.java:62)\n",
-      "\tat sun.reflect.DelegatingConstructorAccessorImpl.newInstance(DelegatingConstructorAccessorImpl.java:45)\n",
-      "\tat java.lang.reflect.Constructor.newInstance(Constructor.java:423)\n",
-      "\tat com.mysql.jdbc.Util.handleNewInstance(Util.java:425)\n",
-      "\tat com.mysql.jdbc.SQLError.createCommunicationsException(SQLError.java:990)\n",
-      "\tat com.mysql.jdbc.MysqlIO.reuseAndReadPacket(MysqlIO.java:3562)\n",
-      "\tat com.mysql.jdbc.MysqlIO.reuseAndReadPacket(MysqlIO.java:3462)\n",
-      "\tat com.mysql.jdbc.MysqlIO.checkErrorPacket(MysqlIO.java:3905)\n",
-      "\tat com.mysql.jdbc.MysqlIO.checkErrorPacket(MysqlIO.java:871)\n",
-      "\tat com.mysql.jdbc.MysqlIO.proceedHandshakeWithPluggableAuthentication(MysqlIO.java:1714)\n",
-      "\tat com.mysql.jdbc.MysqlIO.doHandshake(MysqlIO.java:1224)\n",
-      "\tat com.mysql.jdbc.ConnectionImpl.coreConnect(ConnectionImpl.java:2199)\n",
-      "\tat com.mysql.jdbc.ConnectionImpl.connectOneTryOnly(ConnectionImpl.java:2230)\n",
-      "\tat com.mysql.jdbc.ConnectionImpl.createNewIO(ConnectionImpl.java:2025)\n",
-      "\tat com.mysql.jdbc.ConnectionImpl.<init>(ConnectionImpl.java:778)\n",
-      "\tat com.mysql.jdbc.JDBC4Connection.<init>(JDBC4Connection.java:47)\n",
-      "\tat sun.reflect.GeneratedConstructorAccessor133.newInstance(Unknown Source)\n",
-      "\tat sun.reflect.DelegatingConstructorAccessorImpl.newInstance(DelegatingConstructorAccessorImpl.java:45)\n",
-      "\tat java.lang.reflect.Constructor.newInstance(Constructor.java:423)\n",
-      "\tat com.mysql.jdbc.Util.handleNewInstance(Util.java:425)\n",
-      "\tat com.mysql.jdbc.ConnectionImpl.getInstance(ConnectionImpl.java:386)\n",
-      "\tat com.mysql.jdbc.NonRegisteringDriver.connect(NonRegisteringDriver.java:330)\n",
-      "\tat java.sql.DriverManager.getConnection(DriverManager.java:664)\n",
-      "\tat java.sql.DriverManager.getConnection(DriverManager.java:208)\n",
-      "\tat com.jolbox.bonecp.BoneCP.obtainRawInternalConnection(BoneCP.java:361)\n",
-      "\tat com.jolbox.bonecp.BoneCP.obtainInternalConnection(BoneCP.java:269)\n",
-      "\tat com.jolbox.bonecp.ConnectionHandle.<init>(ConnectionHandle.java:242)\n",
-      "\tat com.jolbox.bonecp.PoolWatchThread.fillConnections(PoolWatchThread.java:115)\n",
-      "\tat com.jolbox.bonecp.PoolWatchThread.run(PoolWatchThread.java:82)\n",
-      "\tat java.util.concurrent.ThreadPoolExecutor.runWorker(ThreadPoolExecutor.java:1149)\n",
-      "\tat java.util.concurrent.ThreadPoolExecutor$Worker.run(ThreadPoolExecutor.java:624)\n",
-      "\tat java.lang.Thread.run(Thread.java:748)\n",
-      "Caused by: java.io.EOFException: Can not read response from server. Expected to read 4 bytes, read 0 bytes before connection was unexpectedly lost.\n",
-      "\tat com.mysql.jdbc.MysqlIO.readFully(MysqlIO.java:3014)\n",
-      "\tat com.mysql.jdbc.MysqlIO.reuseAndReadPacket(MysqlIO.java:3472)\n",
-      "\t... 26 more\n",
-      "2024-12-06 19:23:31,126 ERROR bonecp.BoneCP: Failed to acquire connection to jdbc:mysql://localhost:3306/hive?createDatabaseIfNotExist=true&useSSL=false. Sleeping for 7000 ms. Attempts left: 5\n",
-      "com.mysql.jdbc.exceptions.jdbc4.CommunicationsException: Communications link failure\n",
-      "\n",
-      "The last packet successfully received from the server was 1,331,848 milliseconds ago.  The last packet sent successfully to the server was 1,318,266 milliseconds ago.\n",
-      "\tat sun.reflect.NativeConstructorAccessorImpl.newInstance0(Native Method)\n",
-      "\tat sun.reflect.NativeConstructorAccessorImpl.newInstance(NativeConstructorAccessorImpl.java:62)\n",
-      "\tat sun.reflect.DelegatingConstructorAccessorImpl.newInstance(DelegatingConstructorAccessorImpl.java:45)\n",
-      "\tat java.lang.reflect.Constructor.newInstance(Constructor.java:423)\n",
-      "\tat com.mysql.jdbc.Util.handleNewInstance(Util.java:425)\n",
-      "\tat com.mysql.jdbc.SQLError.createCommunicationsException(SQLError.java:990)\n",
-      "\tat com.mysql.jdbc.MysqlIO.reuseAndReadPacket(MysqlIO.java:3562)\n",
-      "\tat com.mysql.jdbc.MysqlIO.reuseAndReadPacket(MysqlIO.java:3462)\n",
-      "\tat com.mysql.jdbc.MysqlIO.checkErrorPacket(MysqlIO.java:3905)\n",
-      "\tat com.mysql.jdbc.MysqlIO.checkErrorPacket(MysqlIO.java:871)\n",
-      "\tat com.mysql.jdbc.MysqlIO.proceedHandshakeWithPluggableAuthentication(MysqlIO.java:1714)\n",
-      "\tat com.mysql.jdbc.MysqlIO.doHandshake(MysqlIO.java:1224)\n",
-      "\tat com.mysql.jdbc.ConnectionImpl.coreConnect(ConnectionImpl.java:2199)\n",
-      "\tat com.mysql.jdbc.ConnectionImpl.connectOneTryOnly(ConnectionImpl.java:2230)\n",
-      "\tat com.mysql.jdbc.ConnectionImpl.createNewIO(ConnectionImpl.java:2025)\n",
-      "\tat com.mysql.jdbc.ConnectionImpl.<init>(ConnectionImpl.java:778)\n",
-      "\tat com.mysql.jdbc.JDBC4Connection.<init>(JDBC4Connection.java:47)\n",
-      "\tat sun.reflect.GeneratedConstructorAccessor133.newInstance(Unknown Source)\n",
-      "\tat sun.reflect.DelegatingConstructorAccessorImpl.newInstance(DelegatingConstructorAccessorImpl.java:45)\n",
-      "\tat java.lang.reflect.Constructor.newInstance(Constructor.java:423)\n",
-      "\tat com.mysql.jdbc.Util.handleNewInstance(Util.java:425)\n",
-      "\tat com.mysql.jdbc.ConnectionImpl.getInstance(ConnectionImpl.java:386)\n",
-      "\tat com.mysql.jdbc.NonRegisteringDriver.connect(NonRegisteringDriver.java:330)\n",
-      "\tat java.sql.DriverManager.getConnection(DriverManager.java:664)\n",
-      "\tat java.sql.DriverManager.getConnection(DriverManager.java:208)\n",
-      "\tat com.jolbox.bonecp.BoneCP.obtainRawInternalConnection(BoneCP.java:361)\n",
-      "\tat com.jolbox.bonecp.BoneCP.obtainInternalConnection(BoneCP.java:269)\n",
-      "\tat com.jolbox.bonecp.ConnectionHandle.<init>(ConnectionHandle.java:242)\n",
-      "\tat com.jolbox.bonecp.PoolWatchThread.fillConnections(PoolWatchThread.java:115)\n",
-      "\tat com.jolbox.bonecp.PoolWatchThread.run(PoolWatchThread.java:82)\n",
-      "\tat java.util.concurrent.ThreadPoolExecutor.runWorker(ThreadPoolExecutor.java:1149)\n",
-      "\tat java.util.concurrent.ThreadPoolExecutor$Worker.run(ThreadPoolExecutor.java:624)\n",
-      "\tat java.lang.Thread.run(Thread.java:748)\n",
-      "Caused by: java.io.EOFException: Can not read response from server. Expected to read 4 bytes, read 0 bytes before connection was unexpectedly lost.\n",
-      "\tat com.mysql.jdbc.MysqlIO.readFully(MysqlIO.java:3014)\n",
-      "\tat com.mysql.jdbc.MysqlIO.reuseAndReadPacket(MysqlIO.java:3472)\n",
-      "\t... 26 more\n"
+      "2024-12-15 22:36:31,388 WARN conf.HiveConf: HiveConf of name hive.stats.jdbc.timeout does not exist\n",
+      "2024-12-15 22:36:31,388 WARN conf.HiveConf: HiveConf of name hive.stats.retries.wait does not exist\n",
+      "2024-12-15 22:36:56,632 WARN metastore.ObjectStore: Failed to get database global_temp, returning NoSuchObjectException\n",
+      "[Stage 4:================>                                          (2 + 4) / 7]\r"
      ]
     }
    ],
