--- a/Data Analysis & Visualization.ipynb
+++ b/Data Analysis & Visualization.ipynb
@@ -245,7 +245,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a3d96e05",
+   "id": "b65d1c8d",
    "metadata": {},
    "source": [
     "## Check Outlier"
@@ -254,7 +254,7 @@
   {
    "cell_type": "code",
    "execution_count": 42,
-   "id": "89080a21",
+   "id": "5c4040e1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -275,7 +275,7 @@
   {
    "cell_type": "code",
    "execution_count": 43,
-   "id": "39d0daac",
+   "id": "3925f679",
    "metadata": {},
    "outputs": [
     {
@@ -478,7 +478,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e3cbe1c4",
+   "id": "20cd473d",
    "metadata": {},
    "source": [
     "## Show the outlier as boxplot"
@@ -487,7 +487,7 @@
   {
    "cell_type": "code",
    "execution_count": 54,
-   "id": "a21e8f7b",
+   "id": "2a07d0eb",
    "metadata": {},
    "outputs": [
     {
@@ -533,7 +533,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ce590082",
+   "id": "5dc91e59",
    "metadata": {},
    "source": [
     "## Remove Outlier"
@@ -542,7 +542,7 @@
   {
    "cell_type": "code",
    "execution_count": 51,
-   "id": "f2f99517",
+   "id": "6388dbc0",
    "metadata": {},
    "outputs": [
     {
@@ -599,7 +599,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "74990f1a",
+   "id": "d3c2dbf0",
    "metadata": {},
    "source": [
     "## After Remove Outlier"
@@ -608,7 +608,7 @@
   {
    "cell_type": "code",
    "execution_count": 53,
-   "id": "d938c27b",
+   "id": "33bb856a",
    "metadata": {},
    "outputs": [
     {
@@ -790,7 +790,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f301606a",
+   "id": "3ea0343b",
    "metadata": {},
    "source": [
     "## Correlation Analysis"
@@ -799,7 +799,7 @@
   {
    "cell_type": "code",
    "execution_count": 59,
-   "id": "639b62ca",
+   "id": "25ea2254",
    "metadata": {},
    "outputs": [
     {
@@ -823,7 +823,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bf4e54cf",
+   "id": "1cc2a849",
    "metadata": {},
    "source": [
     "## Visualization 2: Correlation Heatmap"
@@ -832,7 +832,7 @@
   {
    "cell_type": "code",
    "execution_count": 60,
-   "id": "638ea352",
+   "id": "eba7a7f8",
    "metadata": {},
    "outputs": [
     {
@@ -868,7 +868,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "13f831a1",
+   "id": "5f1b6b42",
    "metadata": {},
    "source": [
     "## Seasonal Wind Speed Analysis"
@@ -877,7 +877,7 @@
   {
    "cell_type": "code",
    "execution_count": 61,
-   "id": "d266c96a",
+   "id": "6ad14cce",
    "metadata": {},
    "outputs": [
     {
@@ -903,7 +903,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d1636091",
+   "id": "a01e62db",
    "metadata": {},
    "source": [
     "## Visualization 3: Wind Speed Comparison"
@@ -912,7 +912,7 @@
   {
    "cell_type": "code",
    "execution_count": 62,
-   "id": "c893d971",
+   "id": "e91e348c",
    "metadata": {},
    "outputs": [
     {
@@ -959,7 +959,7 @@
   {
    "cell_type": "code",
    "execution_count": 73,
-   "id": "87d11382",
+   "id": "a008cfb7",
    "metadata": {},
    "outputs": [
     {
@@ -983,7 +983,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7e667ab5",
+   "id": "ced127fa",
    "metadata": {},
    "source": [
     "## KDEPlot: Kernel Density Estimate Plot"
@@ -992,7 +992,7 @@
   {
    "cell_type": "code",
    "execution_count": 76,
-   "id": "fddde7bc",
+   "id": "339aa1eb",
    "metadata": {},
    "outputs": [
     {
@@ -1029,7 +1029,7 @@
   {
    "cell_type": "code",
    "execution_count": 79,
-   "id": "8224c137",
+   "id": "401b4cdc",
    "metadata": {},
    "outputs": [
     {
@@ -1120,7 +1120,7 @@
   {
    "cell_type": "code",
    "execution_count": 80,
-   "id": "2c61721d",
+   "id": "f5cb0255",
    "metadata": {},
    "outputs": [
     {
@@ -1142,7 +1142,7 @@
   {
    "cell_type": "code",
    "execution_count": 81,
-   "id": "41a71f0d",
+   "id": "c924a185",
    "metadata": {},
    "outputs": [
     {
@@ -1224,7 +1224,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "338f6569",
+   "id": "31c4f4a3",
    "metadata": {},
    "source": [
     "## Create a function for line plot"
@@ -1233,7 +1233,7 @@
   {
    "cell_type": "code",
    "execution_count": 82,
-   "id": "9b1eda23",
+   "id": "e3864d1b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1247,7 +1247,7 @@
   {
    "cell_type": "code",
    "execution_count": 84,
-   "id": "93150b47",
+   "id": "afe6a027",
    "metadata": {},
    "outputs": [
     {
@@ -1274,7 +1274,7 @@
   {
    "cell_type": "code",
    "execution_count": 85,
-   "id": "db99c208",
+   "id": "6c225af4",
    "metadata": {},
    "outputs": [
     {
@@ -1302,7 +1302,7 @@
   {
    "cell_type": "code",
    "execution_count": 88,
-   "id": "c48f1550",
+   "id": "5602de2e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1321,7 +1321,7 @@
   {
    "cell_type": "code",
    "execution_count": 90,
-   "id": "ea2ffd1d",
+   "id": "b5d0a13d",
    "metadata": {},
    "outputs": [
     {
@@ -1351,7 +1351,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7ada14bb",
+   "id": "c98bb424",
    "metadata": {},
    "source": [
     "## Check the pivot "
@@ -1360,7 +1360,7 @@
   {
    "cell_type": "code",
    "execution_count": 91,
-   "id": "e4927e6f",
+   "id": "e73f476c",
    "metadata": {},
    "outputs": [
     {
@@ -1501,7 +1501,7 @@
   {
    "cell_type": "code",
    "execution_count": 93,
-   "id": "29caf592",
+   "id": "4638cefe",
    "metadata": {},
    "outputs": [
     {
@@ -1530,7 +1530,7 @@
   {
    "cell_type": "code",
    "execution_count": 92,
-   "id": "688bf135",
+   "id": "e86d391a",
    "metadata": {},
    "outputs": [
     {
@@ -1558,7 +1558,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "85974092",
+   "id": "b497105c",
    "metadata": {},
    "source": [
     "## Select all the case in one plot"
@@ -1567,7 +1567,7 @@
   {
    "cell_type": "code",
    "execution_count": 94,
-   "id": "b5c8f88f",
+   "id": "c5d34d5c",
    "metadata": {},
    "outputs": [
     {
@@ -1600,7 +1600,7 @@
   {
    "cell_type": "code",
    "execution_count": 106,
-   "id": "54e08951",
+   "id": "8c5a0f5a",
    "metadata": {},
    "outputs": [
     {
@@ -1738,7 +1738,7 @@
   {
    "cell_type": "code",
    "execution_count": 107,
-   "id": "393175e5",
+   "id": "c4caa83a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1749,7 +1749,7 @@
   {
    "cell_type": "code",
    "execution_count": 108,
-   "id": "948cc7a5",
+   "id": "ea76f581",
    "metadata": {},
    "outputs": [
     {
@@ -1798,7 +1798,7 @@
   {
    "cell_type": "code",
    "execution_count": 117,
-   "id": "4d48c4bc",
+   "id": "cf31e101",
    "metadata": {},
    "outputs": [
     {
@@ -1832,7 +1832,7 @@
   {
    "cell_type": "code",
    "execution_count": 119,
-   "id": "fdab24dc",
+   "id": "286e3b04",
    "metadata": {},
    "outputs": [
     {
@@ -1866,8 +1866,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 122,
-   "id": "f47ca339",
+   "execution_count": 124,
+   "id": "c1c2d8db",
    "metadata": {},
    "outputs": [
     {
@@ -1898,6 +1898,26 @@
     "plt.plot(tem_test, label='Test set', color='orange')\n",
     "plt.legend()\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5ae1c528",
+   "metadata": {},
+   "source": [
+    "## Save Dataframe in HDF5 Format for later use in another Jupyter Notebook File"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 127,
+   "id": "8fece3c3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "tem_train.to_pickle('tem_train.pkl')\n",
+    "tem_test.to_pickle('tem_test.pkl')\n",
+    "filtered_tem_logscale.to_pickle('filtered_tem_logscale.pkl')"
    ]
   }
  ],
